# kodegen-tools-prompt

./: Cargo.toml  README.md
data/default_prompts/: code_001.j2.md  env_demo.j2.md  onb_001.j2.md  refactor_example.j2.md
examples/: prompt_demo.rs
examples/common/: mod.rs
src/: add_prompt.rs  defaults.rs  delete_prompt.rs  edit_prompt.rs  get_prompt.rs  lib.rs  main.rs  manager.rs  metadata.rs  template.rs  validation.rs
