[package]
name = "kodegen_tools_prompt"
version = "0.5.2"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-prompt"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_prompt"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
kodegen_mcp_tool = { version = "0.5" }
kodegen_mcp_schema = { version = "0.5" }
kodegen_server_http = { version = "0.5" }
kodegen_config_manager = { version = "0.5" }
kodegen_utils = { version = "0.5" }
kodegen_config = { version = "0.5" }

# MCP SDK - for Tool implementation
rmcp = { version = "0.9", features = ["client", "schemars", "server", "transport-child-process", "transport-io", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-sse-server"] }

# Async runtime - for async execute methods
tokio = { version = "1", features = ["full"] }

# Serialization - for Args and responses
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation - for JsonSchema derive
schemars = "1"

# Error handling - for error conversion and context
anyhow = "1"

# Template engine - CORE for rendering prompts with variables
minijinja = "2"

# Frontmatter parsing - CORE for parsing .j2.md file metadata
gray_matter = "0.3"

# Cross-platform paths - for finding prompts directory
dirs = "6"

# Logging - for debug/info/warn macros in manager and defaults
log = "0.4"

# Regex for template directive validation
regex = "1"
lazy_static = "1"

# Logging - needed for start_server()
env_logger = "0.11"

# Time utilities - needed for start_server() instance_id
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
kodegen_mcp_client = { version = "0.5" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "kodegen_tools_prompt"
path = "src/lib.rs"

[features]
default = []

[[bin]]
name = "kodegen-prompt"
path = "src/main.rs"
